package={name='view', version='0.0.0', edition='2021', default-run='main'}
bin=[{name='main', path='main.rs'}]

[dependencies]
fehler='*'
iter={git='https://github.com/Matthias-Fauconneau/iter'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
ui={git='https://github.com/Matthias-Fauconneau/ui'}
memmap={version='*', package='memmap2'}
owning-ref={package='owning_ref', version = "*"}
bytemuck={version="*", features = ['extern_crate_alloc']}
image={git='https://github.com/Matthias-Fauconneau/image'}
rayon="*"
tiff='*'
las= "*"
dxf = {version='*', features=['serialize']}
bincode = "*"
png = "*"

[patch.crates-io]
ash-window={git='https://github.com/Matthias-Fauconneau/ash'}
ash={git='https://github.com/Matthias-Fauconneau/ash'}
tiff={path='../image-tiff'}
jpeg-decoder={path="../jpeg-decoder"}

[profile.dev]
opt-level = 3
overflow-checks = false
