package={name='view', version='0.0.0', edition='2021', default-run='main'}
bin=[{name='main', path='main.rs'}]

[dependencies]
itertools= "*"
fehler='*'
iter={git='https://github.com/Matthias-Fauconneau/iter'}
ordered-float= "*"
vector={git='https://github.com/Matthias-Fauconneau/vector'}
ui={git='https://github.com/Matthias-Fauconneau/ui'}
memmap={version='*', package='memmap2'}
owning-ref={package='owning_ref', version = "*"}
bytemuck={version="*", features = ['extern_crate_alloc']}
num={git='https://github.com/Matthias-Fauconneau/num'}
image={git='https://github.com/Matthias-Fauconneau/image'}
rayon="*"
tiff='*'
las= "*"
dxf = {version='*', features=['serialize']}
bincode = "*"
png = "*"

[patch.crates-io]
ash-window={git='https://github.com/Matthias-Fauconneau/ash'}
ash={git='https://github.com/Matthias-Fauconneau/ash'}

[profile.dev]
opt-level = 3
overflow-checks = false
